--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 					<h2>Why?</h2>
 					<ul>
 						<li>Share the knowledge</li>
-						<li class="fragment">So you don't have to suffer the way I did</li>
 					</ul>
 					<aside class="notes">
 					</aside>
@@ -59,7 +58,7 @@
 				<section>
 					<h2>Full workflow</h2>
 					<ul>
-						<li>Setting up development environment.</li>
+						<li>Setting up a development environment</li>
 						<li class="fragment">Tinkering terminal environment</li>
 						<li class="fragment">Writing code</li>
 						<li class="fragment">Running code</li>
